# parthenon

./: .editorconfig  .env.example  .gitignore  OAUTH-TEST-GUIDE.md  PARTHENON-SCRIPT-GUIDE.md  README.md  backend_test_output.txt  check-users.ps1  decode-jwt.ps1  docker-compose.yml  e2e_test_output.txt  frontend_test_output.txt  parthenon.ps1  test-permissions.ps1  test-verbose.ps1
backend/: Dockerfile  README.md  alembic.ini  check_oauth_migration.py  debug_routes.py  pyproject.toml  test_oauth_impl.py  test_output.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_baseline.py  002_identity_bootstrap_models.py  06519db12d6e_add_oauth2_to_mcp_session_auth_type.py  10703a671de6_enhance_mcp_hub_skills_sops.py  226f86ce62ae_add_execution_log_entries.py  232324b61ea4_add_model_config_agent_type_model_.py  52908f217517_add_is_system_to_roles.py  53f351b9acd8_add_allowed_identity_types_to_agent_role.py  7a9f2e3b4c5d_replace_allowed_identity_types_with_agent_role_identities.py  8612fc7e10a7_add_execution_logs_prompt_capture_table.py  929e90ddcc2c_add_primary_sop_id_only.py  a1b2c3d4e5f6_agent_identity_oauth_token_fields.py  abc123456789_add_oauth_config_to_mcp_servers.py  afaffd73dcb8_provider_level_model_management.py  d34d6078aae3_add_oauth_expiry_to_mcp_sessions.py  d4abc4c3a961_add_agent_role_mcp_sessions_table.py  d736a85c26fd_user_permission_management.py  dd1dd4f940eb_make_access_request_group_id_optional.py  df2225d787c5_agent_runtime_with_gateway.py  ec336efe6715_add_primary_sop_id_to_agent_type.py.bak  fcbe5b250e08_add_agent_plans.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  credential_vault.py  oidc_client.py  resource_types.py  ssl_context.py  telemetry.py  yaml_config.py  yaml_writer.py
backend/app/db/: session.py
backend/app/middleware/: auth.py
backend/app/schemas/: access_requests.py  agents.py  conversations.py  errors.py  gateway.py  groups.py  identity.py  mcp_hub.py  (+10 more)
backend/tests/: conftest.py
(+723 files in other folders)
