[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parthenon-backend"
version = "0.1.0"
description = "Parthenon Enterprise AI Harness — Backend API"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Redis
    "redis[hiredis]>=5.0.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    # Config
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Crypto
    "cryptography>=43.0.0",
    # Scheduling
    "apscheduler>=3.10.0",
    "SQLAlchemy-Utils>=0.41.0",
    # Notifications
    "aiosmtplib>=3.0.0",
    "slack-sdk>=3.30.0",
    "pymsteams>=0.2.2",
    # Rate limiting
    "slowapi>=0.1.9",
    # OTEL
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "factory-boy>=3.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
